--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,11 +4,17 @@ body{
     font-family: 'Space Mono', monospace;
     font-family: 'Work Sans', sans-serif;
 }
+/* Header design */
+header{
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+}
 nav{
     display: flex;
     padding: 40px 240px;
     justify-content: space-between;
     align-items: center;
+    height: 8rem;
 }
 .nav-title{
     display: flex;
@@ -47,4 +53,97 @@ nav{
     width: 1.8rem;
     height: 1.25rem;
     margin-left: 10px;
+}
+/* Banner design */
+.banner-container{
+    display: flex;
+    justify-content: space-between;
+}
+.banner-content{
+    padding: 145px 240px;
+    margin-right: 45px;
+}
+.banner-pic{
+    padding-top: 20px;
+    padding-right: 240px; 
+}
+.instruction{
+    color: #0B0223;
+    font-size: 3rem;
+    font-weight: 600;
+    margin-bottom: 0px;
+}
+.banner-title{
+    font-size: 5.8rem;
+    font-weight: 800;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-top: 0px;
+    margin-bottom: 24px;
+}
+.banner-des{
+    color: #534C64;
+    font-size: 1.25rem;
+    font-weight: 500;
+    margin-bottom: 17px;
+}
+.btn{
+    display: flex;
+    gap: 10px;
+}
+.btn-1{
+    border-radius: 48px;
+    background:#FF42A5;
+    padding: 15px 30px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: #FFFFFF;
+}
+.go{
+    background-color:  #4EC5F7;
+}
+/* We are gamer design */
+.gamer-container{
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+}
+.gamer{
+    display: flex;
+}
+.gamer-pic{
+    margin-top: 100px;
+    /* height: 489px; */
+}
+.gamer-content{
+    padding-top: 95px;
+    padding-right: 150px;
+    text-align: right;
+}
+.gamer-title{
+    font-size: 3rem;
+    font-weight: 700;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 24px;
+}
+.gamer-des{
+    color: #534C64;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px; /* 166.667% */
+    margin-bottom: 30px;
+}
+.purpose{
+    color: #534C64;
+    font-size: 24px;
+    font-weight: 500;
+}
+strong{
+    color: #534C64;
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 96px;
 }
