--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,7 +131,7 @@ nav{
 }
 .gamer-des{
     color: #534C64;
-    font-size: 18px;
+    font-size: 1.12rem;
     font-weight: 400;
     line-height: 30px; /* 166.667% */
     margin-bottom: 30px;
@@ -147,3 +147,34 @@ strong{
     font-weight: 700;
     margin-bottom: 96px;
 }
+/* Funny design */
+.funny-content{
+   text-align: center;
+}
+.funny-title{
+    margin-top: 120px;
+    color: #0B0223;
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 0px;
+}
+#f{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.funny-des{
+    color: #534C64;
+    font-size: 1.12rem;
+    font-weight: 400;
+    line-height: 30px; /* 166.667% */
+    margin-bottom: 45px;
+}
+.funny-img-container{
+    display: flex;
+}
+.fig:hover{
+    background-blend-mode: overlay;
+}
+    
