--- a/styles/styles.css
+++ b/styles/styles.css
@@ -174,7 +174,8 @@ strong{
 .funny-img-container{
     display: flex;
 }
-.fig:hover{
-    background-blend-mode: overlay;
+.fig-3{
 }
-    
+.middle{
+}
+
