--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,7 +158,7 @@ strong{
     font-weight: 700;
     margin-bottom: 0px;
 }
-#f{
+#f,.p{
     background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
     background-clip: text;
     -webkit-background-clip: text;
@@ -174,8 +174,124 @@ strong{
 .funny-img-container{
     display: flex;
 }
-.fig-3{
+.type{
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    height: 420px;
 }
-.middle{
+.t-fig{
+    display: flex;
+    align-items: center;
+}
+.t-fig-container{
+    display: flex;
+    margin-left: 140px;
+}
+figcaption:hover{
+    color: #FF42A5;
+}
+.t-fig:hover{
+    border-radius: 50px;
+    background: #FFF;
+    border: 2px solid #FF42A5 ;
+    width: 220px;
+    height: 70px;
 }
 
+.t-fig-container-2{
+    display: flex;
+    margin-left: 230px;
+}
+figcaption{
+    color: #0B0223;
+    font-size: 16px;
+    font-weight: 600;
+    margin-left: 10px;
+}
+.play-instant{
+    display: flex;
+    margin-top: 100px;
+    gap: 160px;
+    border: 2px solid red;
+  
+}
+.instant-content{
+    display: block;
+    padding-top: 240px;
+    text-align: center;
+    padding-left: 100px;
+}
+.instant-heading{
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 60px; /* 125% */
+}
+.instant-pic{
+    padding: 50px 180px;
+    width: 630px;
+    height: 650px;
+}
+.angle{
+    width: 310px;
+    height: 350px;
+}
+.talking-angle{
+    border-radius: 8px;
+    width: 250px;
+    height: 270px;
+    position: relative;
+    bottom: 320px;
+    left: 100px;
+}
+/* footer design */
+.footer{
+    background: #0B0223;
+    height: 630px;
+}
+.f{
+    justify-content: center;
+}
+.f h3{
+    color: white;
+}
+    
+li{
+    list-style: none;
+    color: #FFF;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+}
+ul{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+.footer-icons{
+    display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-top: 50px;
+}
+i{
+    width: 100%;
+    padding-left: 40px;
+    color: white;
+}
+.footer-para{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 50px;
+}
+.footer-para p{
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 16px;
+    font-weight: 500;
+}
+.last-one{
+    color: rgba(255, 255, 255, 0.60);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 25px;
+}
