--- a/styles/styles.css
+++ b/styles/styles.css
@@ -174,6 +174,22 @@ strong{
 .funny-img-container{
     display: flex;
 }
+.overlay-content{
+    position: relative;
+    flex-direction: column;
+    bottom:250px;
+    left: 140px;
+}
+    
+.o{
+    border-radius: 8px;
+    width: 45px;
+    height: 40px;
+}
+.o img{
+    height: 35px;
+    font-weight: 35px;
+}
 .type{
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
     height: 420px;
@@ -357,5 +373,44 @@ i{
     }
     .type{
         height: 500px;
+    }
+}
+@media  screen and (min-width:576px) and (max-width:960px) {
+    nav{
+       flex-direction: column;
+       margin-bottom: 40px;
+    }
+    .gamer,.play-instant{
+       flex-direction: column;
+       
+    }
+    .banner-container{
+        flex-direction: column;
+        text-align: center;
+    }
+    .btn{
+        flex-direction: column;
+    }
+    
+    .banner-content{
+        padding: 0px;
+        /* text-align: center; */
+    }
+    .banner-pic{
+        width: 100%;
+        height: auto;
+    }
+    .funny-img-container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    .t-fig-container,.t-fig-container-2{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        padding-left: 0px;
+       margin-left: 0px;
+    }
+    .footer{
+        margin-top: 50px;
     }
 }
