--- a/styles/styles.css
+++ b/styles/styles.css
@@ -323,7 +323,9 @@ i{
         grid-template-columns: repeat(1,1fr);
     }
     .banner-content{
-        padding-left: 0px ;
+        flex-direction: column;
+        text-align: center;
+        padding-left: 50px;
     }
     .banner-pic{
         width: 70%;
@@ -332,7 +334,9 @@ i{
         width: 100%;
     }
     .gamer-content{
-        width: 100%;
+        padding: 0px;
+       text-align: center;
+       flex-direction: column;
     }
     .instant-content{
         display: flex;
@@ -370,10 +374,29 @@ i{
        grid-template-columns: repeat(2,1fr);
        padding-left: 0px;
        margin-left: 0px;
+
     }
     .type{
+        width: 100%;
         height: 500px;
     }
+    ul{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    .footer-para{
+       display: grid;
+       grid-template-columns: repeat(2,1fr);
+       gap: 0px;
+       text-align: center;
+    }
+    .last-one{
+       margin-left: 20px;
+    }
+    footer{
+        height: 100vh;
+    }
+
 }
 @media  screen and (min-width:576px) and (max-width:960px) {
     nav{
@@ -389,7 +412,8 @@ i{
         text-align: center;
     }
     .btn{
-        flex-direction: column;
+        flex-direction: row;
+        justify-content: center;
     }
     
     .banner-content{
