--- a/styles/styles.css
+++ b/styles/styles.css
@@ -176,17 +176,34 @@ strong{
     display: flex;
     width: 100%;
 }
-.fig{
-    padding: 0px;
-    margin-left: 3px;
-}
-.overlay-content{
+.flex-item{
     position: relative;
-    flex-direction: column;
-    bottom:250px;
-    left: 140px;
+    flex: 1;
+    margin: 10px;
 }
-    
+.flex-item img{
+    width:100%;
+    height: auto;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 85%;
+    border-radius: 15px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  .flex-item:hover .overlay {
+    opacity: 1;
+  } 
 .o{
     border-radius: 8px;
     width: 45px;
