--- a/styles/styles.css
+++ b/styles/styles.css
@@ -232,7 +232,7 @@ figcaption:hover{
     border-radius: 50px;
     background: #FFF;
     border: 2px solid #FF42A5 ;
-    width: 220px;
+    width: 200px;
     height: 70px;
 }
 
@@ -250,8 +250,6 @@ figcaption{
     display: flex;
     margin-top: 100px;
     gap: 160px;
-    border: 2px solid red;
-  
 }
 .instant-content{
     display: block;
@@ -345,6 +343,10 @@ i{
         display: grid;
         grid-template-columns: repeat(1,1fr);
     }
+    .overlay{
+        height: 90.83%;
+        border-radius: 18px;
+    }
     .banner-content{
         flex-direction: column;
         text-align: center;
@@ -398,6 +400,9 @@ i{
        padding-left: 0px;
        margin-left: 0px;
 
+    }
+    .t-fig:hover{
+        width: 180px;
     }
     .type{
         width: 100%;
