--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,9 +213,50 @@ strong{
     height: 35px;
     font-weight: 35px;
 }
+.careers{
+    height: 600px;
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+    display: flex;
+
+}
+.career{
+    padding-left: 100px;
+}
+.career-title{
+    color: #FFF;
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+.career-des
+{
+    color: #FFF;
+    font-size: 1.1rem;
+    font-weight: 400;
+    line-height: 30px; /* 166.667% */
+}
+.career-list{
+   display: flex;
+   margin-top: 20px;
+   color: #FFF;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 40px; /* 200% */
+    justify-content: space-between;
+}
+.btn-career{
+    border-radius: 48px;
+    background: #FFF;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #FF42A5;
+    text-transform: uppercase;
+    padding: 15px 30px;
+    margin-top: 20px;
+}
 .type{
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
-    height: 420px;
+    height: 400px;
+    margin-top: 20px;
 }
 .t-fig{
     display: flex;
