--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,17 +55,21 @@ nav{
     margin-left: 10px;
 }
 /* Banner design */
+.banner{
+    display: flex;
+}
 .banner-container{
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
 .banner-content{
-    padding: 145px 240px;
+    padding: 145px 200px;
     margin-right: 45px;
 }
 .banner-pic{
+    width: 100%;
     padding-top: 20px;
-    padding-right: 240px; 
+    /* padding-right: 240px;  */
 }
 .instruction{
     color: #0B0223;
@@ -308,6 +312,7 @@ figcaption{
     width: 630px;
     height: 650px;
 }
+
 .angle{
     width: 310px;
     height: 350px;
@@ -380,6 +385,10 @@ i{
         grid-template-columns: repeat(1,1fr);
         padding: 0px;
     }
+    .banner{
+        flex-direction: column;
+        height: 100%;
+    }
     .banner-container, .gamer, .funny-img-container{
         display: grid;
         grid-template-columns: repeat(1,1fr);
@@ -394,7 +403,7 @@ i{
         padding-left: 50px;
     }
     .banner-pic{
-        width: 70%;
+        width: 100%;
     }
     .gamer-pic{
         width: 100%;
@@ -412,18 +421,19 @@ i{
     }
     .instant-heading{
         line-height: normal;
-        width: 370px;
+        width: 100%;
     }
     .play-instant{
-        display: grid;
+        /* display: grid;
         grid-template-columns: repeat(1,1fr);
         padding: 0px;
-        margin: 0px;
+        margin: 0px; */
+        flex-direction: column;
     }
     .instant-pic{
         width: 100%;
         margin-left: 0px;
-        padding-left: 0px;
+        padding: 0px 0px;
         margin-top: 0px;
     }
     .talking-angle{
@@ -434,6 +444,18 @@ i{
     .instant-des{
         margin-bottom: 0px;
         padding-bottom: 0px;
+    }
+    .careers{
+       height: 100%;
+       flex-direction: column;
+    }
+    .career{
+        padding-left: 50px;
+    }
+    .career-list{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 40px;
     }
     .t-fig-container,.t-fig-container-2{
        display: grid;
@@ -467,7 +489,7 @@ i{
     }
 
 }
-@media  screen and (min-width:576px) and (max-width:960px) {
+@media  screen and (min-width:576px) and (max-width:992px) {
     nav{
        flex-direction: column;
        margin-bottom: 40px;
@@ -489,6 +511,25 @@ i{
         padding: 0px;
         /* text-align: center; */
     }
+    .instant-content{
+        padding-left: 50px;
+    }
+    .play-instant{
+        padding-left: 0px;
+    }
+    .instant-img{
+        width: 100%;
+        height: 100%;
+    }
+    .angle{
+        width: 90%;
+        height: 100%;
+    }
+    .instant-pic{
+        width: 70%;
+        height: 100%;
+        /* padding: 0px 0px; */
+    }
     .banner-pic{
         width: 100%;
         height: auto;
@@ -497,11 +538,22 @@ i{
         display: grid;
         grid-template-columns: repeat(2,1fr);
     }
+    .careers{
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+    }
+    .career{
+        padding-left: 50px;
+    }
     .t-fig-container,.t-fig-container-2{
         display: grid;
         grid-template-columns: repeat(2,1fr);
         padding-left: 0px;
        margin-left: 0px;
+    }
+    .type{
+        height: 100%;
     }
     .last-one{
         margin-left: 200px;
